--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,4 +1,6 @@
-FROM couchbase/server:7.0.5
+FROM couchbase/server
+
+RUN apt-get update && apt-get install -y jq curl vim && apt-get clean
 
 LABEL maintainer="G03 Team"
 
@@ -9,8 +11,15 @@ COPY --chown=couchbase:couchbase ./data/users.json  /opt/couchbase/var/lib/couch
 COPY --chown=couchbase:couchbase ./reviews_eventing.json /opt/couchbase/var/lib/couchbase/input/reviews_eventing.json
 
 # Copy entrypoint
-COPY /entrypoint.sh /config_entrypoint.sh
+COPY /config.sh /config_entrypoint.sh
 RUN chmod +x /config_entrypoint.sh
+RUN chown couchbase:couchbase /config_entrypoint.sh
 
-CMD ["/config_entrypoint.sh"]
+# run entry point
+RUN /config_entrypoint.sh
+
+
+HEALTHCHECK --interval=10s --timeout=3s --retries=3 \
+  CMD curl -s -f http://localhost:8091/pools || exit 1
+
 
